# MLBase

./: .gitignore  README.md  copy.md  models.md  pytorch_env-requirements.md  quick_copy.md  requirements.md  待办.md  快捷键大全.ipynb  快捷键大全.md  目录.md
A_PythonBasis/Other/: __name__属性.ipynb  break,continue语句.ipynb  del删除对象引用.ipynb  python命名规则.ipynb  三元表达式.ipynb  基本快捷键.ipynb  循环结构.ipynb  打包与解包.ipynb  模块的导入.ipynb  (+2 more)
F_Tensorflow/: tensorflow_help.md
F_Tensorflow-ing/: tensorflow_help.md
F_Tensorflow_ing/: tensorflow_help.md
F_Tool/: 并行处理jielib.ipynb  进度条tqdm模块.ipynb
G_Tool/: __init__.py  精确的浮点运算decimal模块.ipynb  计时工具timeit模块.ipynb
I_MyCode/: encapsulation_.md  encapsulation_models_DL.md  encapsulation_models_ML.md  encapsulation_models_relevant.md  tricks_.md
I_Template/: DataFrame交换行列顺序.ipynb  复杂逻辑运算.ipynb
J_Template/: DataFrame满足提交条件值索引.ipynb  Template_other.md  assembly_.md  assembly_models.md  assembly_models_DL.md  assembly_models_ML.md  assembly_models_relevant.md  encapsulation_.md  extend.md  models.md  pytorch冻结某些网络层.ipynb  tricks_.md  复杂逻辑运算.ipynb
K_docs/: pycharm_vscode快捷键.md  python规约.ipynb  pytorch_env-requirements.md  待办.md  快捷键大全.md  目录.md
K_docs/python安装与配置/uv_example/: pyproject.toml
K_docs/python安装与配置/uv_example/sub0/: pyproject.toml
K_docs/python安装与配置/uv_example/sub1/: main.py  pyproject.toml
K_docs/uv_example/: pyproject.toml
K_docs/uv_example/sub0/: computer.py  main.py  pyproject.toml
L_docs/: python规约.ipynb  pytorch_env-requirements.md  待办.md  快捷键大全.md  核心包安装指南.md  目录.md  错误解决.md
test/: test.ipynb  test.py
tests/: test.ipynb
(+3338 files in other folders)
